welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:3: error: ')' expected but '}' found.
	 else {(cigars >= 40) & (cigars <= 60}
                                             ^