welcome.lessons.welcome.bat.bool2.CigarParty.scala.code
def cigarParty(cigars:Int, isWeekend:Boolean):Boolean = {
	if (isWeekend) { (cigars >= 40)}
	 else {(cigars >= 40) & (cigars <= 60}
}
